<resources>
    <string name="app_name">Codabapp</string>
    <string name="pedidos">Pedidos</string>
    <string name="tienda">Tienda</string>
    <string name="clientes">Clientes</string>
    <string name="clientes_favoritos">Clientes favoritos</string>
    <string name="crear_pedido">Crear pedido...</string>
    <string name="microphone">Microphone</string>
    <string name="edit">Edit</string>
    <string name="detalle_pedido">Detalle de pedido</string>
    <string name="ramon">Ramon Valdez</string>
    <string name="descripcionpedido" > Pedido para las 12:00 pm de hoy</string>
    <string name="estadopedido" >Estado del pedido</string>
    <string name="pedidos_curso" >Pedidos en curso</string>
    <string name="info_pedido">Información del Pedido</string>
    <string name="lista_de_compra">Lista de compra</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="graba">Graba y escucha el pedido</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
