<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_pedidos">

    <fragment
        android:id="@+id/navigation_pedidos"
        android:name="com.example.codabapp.ui.pedidos.PedidosFragment"
        android:label="@string/pedidos"
        tools:layout="@layout/fragment_pedidos" />

    <fragment
        android:id="@+id/navigation_detalle_pedido"
        android:name="com.example.codabapp.ui.pedidos.DetallePedidoFragment"
        android:label="DetallePedidos"
        tools:layout="@layout/fragment_detalle_pedido"/>

    <fragment
        android:id="@+id/navigation_tienda"
        android:name="com.example.codabapp.ui.tienda.TiendaFragment"
        android:label="@string/tienda"
        tools:layout="@layout/fragment_tienda" />

    <fragment
        android:id="@+id/navigation_clientes"
        android:name="com.example.codabapp.ui.clientes.ClientesFragment"
        android:label="@string/clientes"
        tools:layout="@layout/fragment_clientes" />
</navigation>
