<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pedidos.DetallePedidoFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/barraBusquedaRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/crearPedido"
                    android:layout_width="205dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/mybutton"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:shadowColor="#989898"
                    android:text="@string/crear_pedido"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorBackground" />

                <ImageButton
                    android:id="@+id/microphone"
                    android:layout_width="47dp"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="false"
                    android:background="@drawable/mybutton"
                    android:contentDescription="@string/microphone"
                    android:cropToPadding="false"
                    android:src="@drawable/ic_mic_black_24dp" />

                <ImageButton
                    android:id="@+id/book"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:adjustViewBounds="false"
                    android:background="@drawable/mybutton"
                    android:contentDescription="@string/edit"
                    android:cropToPadding="false"
                    android:src="@drawable/ic_book_black_24dp" />

            </TableRow>

            <TableRow
                android:id="@+id/DetallePedidoRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/DetallePedido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:drawableStart="@drawable/ic_bookmark_border_black_24dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/detalle_pedido"
                    android:textColor="@color/subtitleTextColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:id="@+id/tienda"
                    android:layout_width="47dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:adjustViewBounds="false"
                    android:background="@drawable/mybutton"
                    android:contentDescription="@string/tienda"
                    android:cropToPadding="false"
                    android:src="@drawable/ic_store_mall_directory_blue_24dp" />

            </TableRow>

        </TableLayout>

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="false">


            <ImageButton
                android:id="@+id/usericon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"

                android:contentDescription="usericon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/iconman" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="88dp"
                android:layout_marginLeft="78dp"
                android:layout_marginTop="24dp"
                android:text="@string/ramon"

                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/estado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="84dp"
                android:text="@string/estadopedido"

                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="88dp"
                android:layout_marginLeft="78dp"
                android:layout_marginTop="52dp"
                android:text="@string/descripcionpedido"

                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="241dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="20dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="88dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.133"
                app:srcCompat="@drawable/estadoo" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="44dp"
                android:layout_height="45dp"

                android:layout_marginStart="275dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="30dp"


                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.94"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.04"
                app:srcCompat="@drawable/llamar" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="44dp"
                android:layout_height="45dp"

                android:layout_marginStart="275dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="5dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.94"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.109"
                app:srcCompat="@drawable/mensaje" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>