<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:elevation="0dp"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/barraBusquedaRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/crearPedido"
                    android:layout_width="205dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/mybutton"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:shadowColor="#989898"
                    android:text="@string/crear_pedido"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorBackground" />

                <ImageView
                    android:id="@+id/microphone"
                    android:layout_width="47dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/mybutton"
                    android:clickable="true"
                    android:contentDescription="@string/microphone"
                    android:contextClickable="true"
                    android:cropToPadding="true"
                    android:longClickable="true"
                    android:paddingLeft="7dp"
                    android:paddingRight="7dp"
                    android:src="@drawable/ic_mic_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/book"
                        android:layout_width="47dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/mybutton"
                        android:clickable="true"
                        android:contentDescription="@string/edit"
                        android:contextClickable="true"
                        android:cropToPadding="true"
                        android:longClickable="true"
                        android:paddingLeft="7dp"
                        android:paddingRight="7dp"
                        android:src="@drawable/ic_book_black_24dp" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:id="@+id/clientesFavoritosRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/clientesFavoritos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/clientes_favoritos"
                    android:textColor="@color/subtitleTextColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>