<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/row_padding_vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/row_padding_vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/title_estado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/estadopedido"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageView6"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton"
            app:layout_constraintVertical_bias="0.3" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:background="@color/colorForeground"
            android:contentDescription="@string/clientes"
            android:scaleType="centerInside"
            android:src="@drawable/ic_student"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/rvrow_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ramon"

            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.081"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.021" />

        <TextView
            android:id="@+id/rvrow_entrega"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcionpedido"

            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.119"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            app:layout_constraintTop_toBottomOf="@+id/rvrow_name"
            app:layout_constraintVertical_bias="0.055" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="40dp"
            android:layout_height="40dp"


            app:layout_constraintEnd_toEndOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/rvrow_entrega"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/llamar" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="40dp"
            android:layout_height="40dp"

            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/rvrow_entrega"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/mensaje" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="241dp"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/estadoo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>